# con-lang-gen

./: .gitignore  README.md  README.txt  TODO.txt  Test.hs  con-lang-gen.cabal  dictionary.txt  grammar.txt  inflection.txt  lexicon.txt  maketree.py  phonology.txt  phonotactics.txt  stack.yaml
.stack-work/install/x86_64-linux/lts-6.14/7.10.3/flag-cache/: Cabal-1.22.8.0-7538a8e6fff081dd4308c295dcb029b4  MonadPrompt-1.0.0.5-4f1dbb076ec2d3f86cb0e429a0bd8c8b  MonadRandom-0.4.2.3-88249800c9114ff338da07811cd8c8cf  MonadRandom-0.4.2.3-ac937c09a1f20fc5ce99c84e5c6481fc  OneTuple-0.2.1-51bbbbfe6c23efb65651ccccf04f3ff4  StateVar-1.1.0.4-c870ecc28adfa9764b145a54f6a2c147  aeson-0.11.2.1-4b9414e88af007ec0f3c0111bed561b9  ansi-terminal-0.6.2.3-7b40b18f4e53e6f53c2ffd807e929ca9  ansi-wl-pprint-0.6.7.3-c624a14e647c937768855ca360a122b5  async-2.1.0-033e4fae4da028fc2d6502bd36e5e5a1  attoparsec-0.13.0.2-5c8217f74f208c82613532fc63bbbfeb  base-orphans-0.5.4-80aa061a7fc1e4ab8c82be1540afd813  bifunctors-5.2-0c3e1bee081eb17e20355791e41c1534  bifunctors-5.2-e901e58a1f692b35e864ebeecde90ba3  bytes-0.15.2-bfd050301da33d70a23e98ff3d02cdc5  bytes-0.15.2-e2cc7595ab07a3f6393d228ee090c163  cabal-helper-0.6.3.1-646107a24ba8ecf9d7d59e771a406d8c  cereal-0.5.2.0-5dc4ca6bc62ba38ba7728470b9a480c5  cereal-0.5.2.0-7ea4e72fb8e66bdc3b019357750acbe1  cmdargs-0.10.14-faa0a33022db697842edf726eec09651  comonad-4.2.7.2-4c06ad59e8f1640d751fb18f0c315142  comonad-4.2.7.2-65ab00e4a66fb76d0d960e50e8c2fe23  con-lang-gen-0.0.0.1-4eab26e5ead39376731bfd41ef0f4608  conduit-1.2.7-b0f3f8153b426577852b2dfac5d8e9e7  contravariant-1.4-55200b9f0a5e1fba15c5250daf39819a  contravariant-1.4-c7f1db7ed5e306ce8b515448c54e20b6  cpphs-1.20.1-eca7c0e8cb0355948777aab0882a0af3  distributive-0.5.0.2-393a023f71dc3cd11f1fef5933233cdf  djinn-ghc-0.0.2.3-79409a73f36dea118363d229514f9b9f  djinn-lib-0.0.1.2-c5d596c806bb7f929e393127ca149c86  dlist-0.7.1.2-ff29ea897ce0546ab24638745f33b7b9  either-4.4.1.1-1e8dcbe75026690bd6f0c58c357cf0f2  enclosed-exceptions-1.0.2-255e2b54b57c345d61e66cf69bf88519  erf-2.0.0.0-5d2485f579f0cefbc60eb79a36e00afa  exceptions-0.8.3-d4f6a36a62bf146f0a4221b7c358d663  extra-1.4.10-191d8c78e884e39101bc8a3a146f74b1  fail-4.9.0.0-dd8812a5b6b0a0ce790ee5a93be03a9d  fclabels-2.0.3-d339af25a25adb31cfd8476224039fd0  flexible-defaults-0.0.1.2-79ce9afaf517e818f4665795815d69a0  flexible-defaults-0.0.1.2-bc3b082e9d4bdb33a9476b75693f256f  (+73 more)
.stack-work/install/x86_64-linux/lts-6.14/7.10.3/pkgdb/: con-lang-gen-0.0.0.1-26badc9a0eb5bc7dec2008c82527b0ea.conf  con-lang-gen-0.0.0.1-7f8c430d9a4bb0550d530d57b777ec63.conf  con-lang-gen-0.0.0.1-9934e464e845ab6cf0697a85097b2f29.conf  con-lang-gen-0.0.0.1-c455c921f7fa9233b64312f938523b6a.conf  con-lang-gen-0.0.0.1-e03013d5bb7a4605350c98a364871a51.conf  package.cache  random-extras-0.19-0bb5532be68b1754a74fcdab95069967.conf
.stack-work/install/x86_64-linux/lts-7.12/8.0.1/flag-cache/: HTTP-4000.3.3-JMFhmeoXqbBIjfEWxmijf9  MonadPrompt-1.0.0.5-DSJ4febv4ITH7w1gOjdDZE  OneTuple-0.2.1-FkHnVqGr3Rs7nIXoJbomJG  async-2.1.1-xFiBzw9xoB8HPZAuxUY2o  base16-bytestring-0.1.1.6-5dPoF8dzhwzBaEB2MvnmIS  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  bytes-0.15.2-E6X198bH6LOIR7jMjbNIT2  cereal-0.5.4.0-2FJYHGgtE5C3SxaZjt25xS  cryptohash-sha256-0.11.100.1-CxymMT87vhE9zOHmyydW84  (+32 more)
app/: Main.hs
doc/archive/: ConsonantPhoneGenAdvanced.hs  DeclensionGen.hs  GrammarGen.hs  PhonemeGen.hs  PhonemeInventoryGen.hs  PhonemeType.hs  PhonologyParse.hs  PhonotacticType.hs  PhonotacticsGen.hs  WordGen.hs
doc/archive/01/: Main.hs  WordStructureGen.hs
doc/archive/02/: GrammarGen.hs  GrammarType.hs  Main.hs  PhoneGen.hs  PhoneType.hs  PhonologyGen.hs  PhonologyType.hs  WordGen.hs  WordStructureGen.hs
doc/archive/03/: PhonemeTypeAdvanced.hs  PhonologyType.hs
doc/notes/: .~lock.distinctiveFeaturesMASTER.xlsx#  agreement musing.ods  case musings.ods  consonantRework.xlsx  distinctiveFeatures.csv  distinctiveFeaturesMASTER.xlsx  grammar.xlsx  lexemes.csv  lexemes.xlsx  meaningsN.txt  notes.xlsx  numerals.csv  phonesIPADecimalC.csv  phonesIPADecimalV.csv  phonesIPAMASTER.xlsx  phonesIPANamesC.csv  phonesIPANamesV.csv  wordStructure.xlsx  words.csv
doc/planning/: 00 Overall Summary.docx  01 Phoneme Inventory Generator Summary.docx
doc/planning/Attempts/: Design Document attempt.docx
raw/grammatical categories/: aspect.txt  case.txt  case_.txt  clusivity.txt  gender.txt  honorific.txt  number.txt  person.txt  polarity.txt  specificity.txt  tense.txt  topic.txt  transitivity.txt  voice.txt
raw/grammatical categories/conjugation/: evidentiality.txt  mood.txt  person.txt  transitivity.txt  voice.txt  volition.txt
raw/grammatical categories/declension/: animacy.txt  case.txt  definiteness.txt  gender.txt  honorific.txt  number.txt  specificity.txt
raw/graphemes/: lettersC.txt  lettersV.txt
raw/meanings/: adjectives.txt  adpositions.txt  compound.txt  derivation.txt  nouns.txt  verbs.txt
raw/phones/: consonants.txt  distinctiveFeaturesMASTER.xlsx  phonesC.txt  phonesV.txt  vowels.txt
raw/pos/: adjectives.txt  adverbs.txt  complementizers.txt  determiners.txt  nouns.txt  prepositions.txt  verbs.txt
src/: ConsonantPhoneGen.hs  Constants.hs  DeclensionGen.hs  EnglishStuff.hs  GrammarData.hs  GrammarGen.hs  GrammarGen2.hs  GrammarType.hs  GrammarType2.hs  Graphemics.hs  HelperFunctions.hs  InflectionData.hs  InflectionGen.hs  LoadStuff.hs  MinProg.hs  MorphologyGen.hs  OtherData.hs  OtherData2.hs  Parse.hs  Parse2.hs  ParseTree.hs  ParseTreeGen.hs  PhonemeData.hs  PhonemeGen.hs  PhonemeInventoryGen.hs  PhonemeInventoryGen2.hs  PhonemeType.hs  PhonemeType2.hs  PhonologyGen.hs  PhonotacticsGen.hs  PhonotacticsGen2.hs  Romanization.hs  RuleType.hs  Syllabification.hs  Translate.hs  WordGen.hs  WordGen2.hs  XBar.hs  XBarType.hs
src/Data/: Grammar.hs  Inflection.hs  Language.hs  Other.hs  Phoneme.hs  Soundchange.hs  Word.hs
src/Latex/: Inflection.hs  Language.hs  Phonology.hs  Sentence.hs
src/Morph/: Grammar.hs  Language.hs  Phonology.hs  PhonologyC.hs  PhonologyV.hs  RescueSyllable.hs  Soundchange.hs  VowelShift.hs
(+213 files in other folders)
