name:                con-lang-gen
version:             0.0.0.1
synopsis:            A program that generates constructed languages
description:         Please see README.md
homepage:            https://github.com/Brightgalrs/con-lang-gen#readme
license:             MIT
license-file:        LICENSE.md
author:              Robert D. Schultz Jr.
maintainer:          chaosrobie@gmail.com
copyright:           2016 Robert D. Schultz Jr.
category:            Linguistics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Gen.Phonology
                     , Data.Phoneme
                     , Gen.Phonotactics
                     , Gen.Word
                     , Gen.Root
                     , Data.Other
                     , Gen.Inflection
                     , Data.Inflection
                     , Gen.Morphology
                     , Gen.Grammar
                     , Data.Grammar
                     , Out.Sentence
                     , Out.Roman
                     , Out.Syllable
                     , Out.Inflection
                     , Out.Lexicon
                     , Out.Phonology
                     , Out.Other
                     , Out.Grammar
                     , Gen.ParseTree
                     , Gen.LanguageTree
                     , LoadStuff
  build-depends:       base >= 4.7 && < 5
                     , rvar -any
                     , random-fu -any
                     , random-extras -any
                     , random-source
                     , tuple
                     , containers
                     , random
                     , mwc-random
                     , vector
                     , hashable
                     , directory
                     , classy-prelude
                     , text
  default-language:    Haskell2010

executable con-lang-gen-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , con-lang-gen
                     , rvar
                     , random-fu
                     , random-extras -any
                     , random-source
                     , tuple
                     , containers
                     , random
                     , mwc-random
                     , vector
                     , hashable
                     , directory
                     , classy-prelude
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Brightgalrs/con-lang-gen
