name:                con-lang-gen
version:             0.0.0.1
synopsis:            A program that generates constructed languages
description:         Please see README.md
homepage:            https://github.com/Brightgalrs/robert-d-schultz#readme
license:             MIT
license-file:        LICENSE.md
author:              Robert D. Schultz Jr.
maintainer:          chaosrobie@gmail.com
copyright:           2016 Robert D. Schultz Jr.
category:            Linguistics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Out.Language
                     , Gen.LanguageTree
  -- ghc-options:         -Wall
  default-extensions:  NoImplicitPrelude, OverloadedStrings
  build-depends:       classy-prelude
                     , base
                     , rvar
                     , random-fu
                     , random-extras
                     , random-source
                     , tuple
                     , containers
                     , random
                     , mwc-random
                     , vector
                     , hashable
                     , directory
                     , text
                     , safe
  default-language:    Haskell2010

executable con-lang-gen-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       classy-prelude
                     , base
                     , con-lang-gen
                     , rvar
                     , random-fu
                     , random-extras
                     , random-source
                     , tuple
                     , containers
                     , random
                     , mwc-random
                     , vector
                     , hashable
                     , directory
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Brightgalrs/con-lang-gen
