name:                con-lang-gen
version:             0.0.0.1
synopsis:            A program that generates constructed languages
description:         Please see README.md
homepage:            https://github.com/Brightgalrs/robert-d-schultz#readme
license:             MIT
license-file:        LICENSE.md
author:              Robert D. Schultz Jr.
maintainer:          chaosrobie@gmail.com
copyright:           2016 Robert D. Schultz Jr.
category:            Linguistics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Out.Language
                     , Gen.LanguageTree
                     , Data.Grammar
                     , Data.Inflection
                     , Data.Language
                     , Data.Other
                     , Data.Phoneme
                     , Data.Soundchange
                     , Data.Word
                     , Gen.Grammar
                     , Gen.Grapheme
                     , Gen.Inflection
                     , Gen.Language
                     , Gen.ParseTree
                     , Gen.Phonology
                     , Gen.Phonotactics
                     , Gen.Morpheme
                     , Gen.WritingSystem
                     , Morph.Grammar
                     , Morph.Language
                     , Morph.Phonology
                     , Out.Grammar
                     , Out.Grapheme
                     , Out.IPA
                     , Out.Inflection
                     , Out.Lexicon
                     , Out.Other
                     , Out.Phonology
                     , Out.Roman
                     , Out.Syllable
                     , Out.WritingSystem
                     , LoadStuff
                     , HelperFunctions
                     , EnglishStuff
                     , Constants
                     , Latex.Language
                     , Latex.Phonology
                     , Latex.Inflection
                     , Latex.Sentence

  ghc-options:
  default-extensions:  NoImplicitPrelude, OverloadedStrings, LambdaCase, MultiWayIf
  build-depends:       classy-prelude >= 1.3.1
                     , base
                     , rvar
                     , random-fu
                     , random-extras
                     , random-source
                     , tuple
                     , containers
                     , random
                     , mwc-random
                     , vector
                     , hashable
                     , directory
                     , text
                     , safe
                     , unordered-containers
                     , HaTeX >= 3.19.0.0
  default-language:    Haskell2010

executable con-lang-gen-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-extensions:  NoImplicitPrelude, OverloadedStrings, LambdaCase
  build-depends:       classy-prelude
                     , base
                     , con-lang-gen
                     , rvar
                     , random-fu
                     , random-extras
                     , random-source
                     , tuple
                     , containers
                     , random
                     , mwc-random
                     , vector
                     , hashable
                     , directory
                     , text
                     , safe
                     , unordered-containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Brightgalrs/con-lang-gen
